Add admin features to add documents and update x,y and relevance fields

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -57,6 +57,10 @@ circle {
 	text-align: center;
 }
 
-.enabled{
-	
+.form-group .update-btn{
+	padding: 5px 0 5px 0;
+}
+
+.result{
+	padding: 10px;
 }
