--- a/app/views/Admin.scala.html
+++ b/app/views/Admin.scala.html
@@ -1,4 +1,4 @@
-@(text:String)
+@(docs:List[String], lastUpdatedMDP: String, lastUpdatedPageRank: String)
 
 @import helper._
  
@@ -12,7 +12,8 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <script src="@routes.Assets.versioned("javascripts/jquery-3.1.0.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
-        <script type="text/javascript" src="@routes.HomeController.javascriptRoutes"></script>
+        <script src="@routes.Assets.versioned("javascripts/admin.js")" type="text/javascript"></script>
+        <script type="text/javascript" src="@routes.AdminController.javascriptRoutes()"></script>
     </head>
     <body>	
     <div class="container">
@@ -25,10 +26,34 @@
 				</div>
 				<button type="submit" class="btn btn-primary">Send</button>
     		}
+    		<div class="result">
+    			@if(docs != null){
+    			<ul><h3>Documents Added:</h3>
+    				@for(doc <- docs) {
+    					<li>@doc</li>
+    				}
+    			</ul>
+    			}
+    		</div>
+    	
+			<div class="form-group update-btn">
+				<button class="btn btn-primary" id="update-mdp" type="submit">Update MDP</button>
+				@if( lastUpdatedMDP != null ){
+					<span>@lastUpdatedMDP</span>
+				} else{
+					<span>Never executed!</span>
+				}
+			</div>
+			<div class="form-group update-btn">
+				<button class="btn btn-primary" id="update-pagerank" type="submit">Update PageRank</button>
+				@if( lastUpdatedPageRank != null ){
+					<span>@lastUpdatedPageRank</span>
+				} else {
+					<span>Never executed!</span>
+				}
+			</div>
     	</div>
-    	<div class="result">
-    		<p>@text</p>
-    	</div>
+    	
     </div>
     </body>
 </html>
