--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,55 +1,142 @@
-.visualization{
-	width: 100vw;
-	height: 100vh;
+.visualization {
+	width: 95vw;
+	height: 80vh;
+}
+
+.visualization-wrapper {
+	/* border: 1px solid black; */
+	
+}
+
+.documents-table .table svg {
+	width: 2vw;
+	height: 2vw;
+}
+
+.documents-table table {
+	width: 100%;
+}
+
+.documents-table table thead, tbody, tr, td, th {
+	display: block;
+}
+
+.documents-table table tr:after {
+	content: ' ';
+	display: block;
+	visibility: hidden;
+	clear: both;
+}
+
+.documents-table table thead th {
+	height: 30px;
+
+	/*text-align: left;*/
+}
+
+.documents-table table tbody {
+	height: 30vh;
+	overflow-y: auto;
+}
+
+.documents-table table thead {
+	/* fallback */
+	
+}
+
+.documents-table table tbody td.doc-index, 
+.documents-table table thead th.doc-index {
+	width: 0%;
+	visibility: hidden;
+	display: none;
+} 
+
+.documents-table table tr td{
+	height: 10vh;
+	line-height: 1.5;
+	min-height: 10vh;
+}
+
+.documents-table table tbody td, .documents-table table thead th {
+	width: 16.6%;
+	float: left;
+}
+
+.documents-table table tbody td.doc-title, 
+.documents-table table thead th.doc-title {
+	width: 35%;
+}
+
+.documents-table table tbody td.doc-authors,
+.documents-table table thead th.doc-authors{
+	width: 32%;
+}
+
+.documents-table table thead th.doc-year,
+.documents-table table thead th.doc-relevance,
+.documents-table table thead th.doc-cluster,
+.documents-table table tbody td.doc-year,
+.documents-table table tbody td.doc-relevance,
+.documents-table table tbody td.doc-cluster {
+	width: 6%;
+}
+
+.documents-table table tbody td.doc-cluster{
+	padding: 0;
+}
+
+.documents-table table thead th.doc-doi,
+.documents-table table tbody td.doc-doi {
+	width: 15%;
 }
 
 div.tooltip {
-  position: absolute;
-  text-align: center;
-  width: 350px;
-  height: auto;
-  padding: 2px;
-  font: 12px sans-serif;
-  background: lightsteelblue;
-  border: 0px;
-  border-radius: 8px;
-  /* pointer-events: none; */
+	position: absolute;
+	text-align: center;
+	width: 350px;
+	height: auto;
+	padding: 2px;
+	font: 12px sans-serif;
+	background: lightsteelblue;
+	border: 0px;
+	border-radius: 8px;
+	/* pointer-events: none; */
 }
 
 div.tooltip p {
-    text-transform:capitalize;
+	text-transform: capitalize;
 }
 
 circle {
-	stroke: #ea1717e6; 
+	stroke: #ea1717e6;
 	stroke-width: 4px;
 	stroke-opacity: 0;
 }
 
 .link {
-  fill: none;
-  stroke: #666;
- /* stroke-width: 1.5px; */
-  visibility: hidden;
+	fill: none;
+	stroke: #666;
+	/* stroke-width: 1.5px; */
+	visibility: hidden;
 }
 
 .active {
 	visibility: visible !important;
 }
 
-#searchForm .simple-search.form-inline .form-control{
+#searchForm .simple-search.form-inline .form-control {
 	width: 100%;
 }
 
-.advanced-search{
-	padding-top: 15px;	
+.advanced-search {
+	padding-top: 15px;
 }
 
-#searchForm .advanced-search .form-group .auto-width{
+#searchForm .advanced-search .form-group .auto-width {
 	width: auto;
 }
 
-.simple-search .search-buttons{
+.simple-search .search-buttons {
 	text-align: right;
 }
 
@@ -57,10 +144,10 @@ circle {
 	text-align: center;
 }
 
-.form-group .update-btn{
+.form-group .update-btn {
 	padding: 5px 0 5px 0;
 }
 
-.result{
+.result {
 	padding: 10px;
 }
