--- a/app/views/Index.scala.html
+++ b/app/views/Index.scala.html
@@ -9,20 +9,22 @@
     <head>
         @* Here's where we render the page title `String`. *@
         <title>Welcome</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.min.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap-slider.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap-slider/css/bootstrap-slider.css")">
         
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/jquery-3.1.0.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("javascripts/bootstrap-slider.min.js")" type="text/javascript"></script>
         
-        <script src="@routes.Assets.versioned("javascripts/d3.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("lib/jquery/jquery.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.js")" type="text/javascript" ></script>
+        <script src="@routes.Assets.versioned("lib/bootstrap-slider/bootstrap-slider.js")" type="text/javascript" ></script>
+        <script src="@routes.Assets.versioned("lib/d3js/d3.js")" type="text/javascript"></script>
+        
         <script src="@routes.Assets.versioned("javascripts/d3-scale-chromatic.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("javascripts/knearest.js")" type="text/javascript"></script>
+        
         <script src="@routes.Assets.versioned("javascripts/forces.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("javascripts/query.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
+        
         <script type="text/javascript" src="@routes.HomeController.javascriptRoutes"></script>
     </head>
     <body>	
@@ -101,6 +103,7 @@
     		<button id="reheat-btn" class="btn btn-warning glyphicon glyphicon-fire"></button>
     	</div>
     </div>
+    <div id="loading" class="loading hidden"></div>
     <div class="visualization-wrapper">
 		<svg id="visualization" class="visualization">
        	</svg>
